fix(appbar): appbar covers lightgallery

--- a/source/css/files/plus/global.css
+++ b/source/css/files/plus/global.css
@@ -138,3 +138,7 @@ span.badge[data-badge-caption]::after {
     transform: translateX(-120%);
   }
 }
+
+.lg-backdrop {
+  z-index: 1600;
+}
